--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#0891b2" />
     <meta
       name="description"
-      content="Future-Tech MI Küldetés - Gamifikált gépi tanulási oktatási alkalmazás"
+      content="Future-Tech MI küldetés - Gamifikált gépi tanulási oktatási alkalmazás"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Future-Tech MI Küldetés</title>
+    <title>Future-Tech MI küldetés</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -93,7 +93,7 @@
       <!-- Loading screen -->
       <div class="loading-screen" id="loading-screen">
         <div class="loading-logo">🏭</div>
-        <div class="loading-text">Future-Tech MI Küldetés</div>
+        <div class="loading-text">Future-Tech MI küldetés</div>
         <div class="loading-text">Betöltés...</div>
         <div class="loading-spinner"></div>
       </div>
